# rfdocsindexer

./: .coveragerc  .flake8  .gitattributes  .gitignore  .mypy.ini  README.md  pyproject.toml  pytest.ini  tasks.py  tox.ini
.github/workflows/: actions.yml  ci-release.yaml  ci-tests.yaml
docs/diagrams/: readme.txt  rfdocsindexer_diagram.drawio
rfdocsindexer/: cli.py  config.py  indexer.py  models.py
rfdocsindexer/templates/: index.html
tests/acceptance/: variables.py
tests/acceptance/resources/: cli.resource  config.resource  index.resource  libdocs.resource  testutils.resource
tests/acceptance/tests/: __init__.robot  index.robot  libdocs.robot
tests/assets/config_file_examples/: config_bad_key.toml  config_valid.toml
tests/assets/index_file_examples/: index1.html  index_libdir_recursive.html
tests/assets/libdoc_examples/: BuiltIn.html  BuiltIn.json  BuiltIn.spec  BuiltIn.xml  Collections.html  Collections.json  Collections.spec  Collections.xml  DateTime.html  DateTime.json  DateTime.spec  DateTime.xml  Dialogs.html  Dialogs.json  Dialogs.spec  Dialogs.xml  LibModule1.html  LibModule1.json  LibModule1.spec  LibModule1.xml  LibModule2.LibModule2CustomName.html  LibModule2.LibModule2CustomName.json  LibModule2.LibModule2CustomName.spec  LibModule2.LibModule2CustomName.xml  LibModule3.html  LibModule3.json  LibModule3.spec  LibModule3.xml  OperatingSystem.html  OperatingSystem.json  OperatingSystem.spec  OperatingSystem.xml  Process.html  Process.json  Process.spec  Process.xml  Screenshot.html  Screenshot.json  Screenshot.spec  Screenshot.xml  (+20 more)
tests/assets/libraries_dir_examples/libraries_dir_recursive/: lib1.resource
tests/assets/libraries_dir_examples/libraries_dir_recursive/LibModule1/: __init__.py
tests/assets/libraries_dir_examples/libraries_dir_recursive/LibModule2/: __init__.py
tests/assets/libraries_dir_examples/libraries_dir_recursive/subdir1/LibModule3/: __init__.py
tests/unit/: conftest.py  test_cli.py  test_config.py  test_indexer.py  test_model.py  testdata.py
tmp/: index.html
tmp/libdocs_html/: BuiltIn.html  Collections.html  DateTime.html  LibModule1.html  LibModule2.LibModule2CustomName.html  LibModule3.html  OperatingSystem.html  Process.html  Screenshot.html  String.html  Telnet.html  XML.html  lib1.html  lib2.html
tmp/libdocs_json/: BuiltIn.json  Collections.json  DateTime.json  LibModule1.json  LibModule2.LibModule2CustomName.json  LibModule3.json  OperatingSystem.json  Process.json  Screenshot.json  String.json  Telnet.json  XML.json  lib1.json  lib2.json
tmp/libdocs_xml/: Telnet.xml
tmp/libspecs/: LibModule1.spec
