[tool.poetry]
name = "rfdocsindexer"
version = "1.1.0"
description = "A simple and configurable generator for RobotFramework documentation"
license = "Apache-2.0"
authors = ["Vincent Maire <maire.vincent31@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Vincema/rfdocsindexer"
repository = "https://github.com/Vincema/rfdocsindexer"
keywords = ["RobotFramework", "Documentation", "Libdocs", "Testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Tool",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Documentation",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Operating System :: iOS",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
]


[tool.poetry.scripts]
indexrfdocs = "rfdocsindexer.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
Jinja2 = "^3.0.1"
pydantic = "^1.8.2"
robotframework = ">=4,<6"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
beautifulsoup4 = "^4.9.3"
black = "^22.1"
coverage = "^6.0"
flake8 = "^5.0.4"
invoke = "^1.6.0"
isort = "^5.9.3"
mypy = "^0.982"
pytest = "^7.0.1"
robotframework-tidy = "^3.2"
tox = "^3.24.0"
tox-poetry-installer = {extras = ["poetry"], version = "^0.10.0"}
types-toml = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
